--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "messageport-dispatcher",
   "description": "Cross-domain EventDispatcher for MessagePort interface",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/messageport-event-dispatcher.min.js",
   "keywords": [
     "events",
@@ -40,7 +40,7 @@
     "karma-coverage": "^0.5.3",
     "karma-coveralls": "^1.1.2",
     "karma-mocha": "^0.2.1",
-    "karma-phantomjs-launcher": "^0",
+    "karma-firefox-launcher": "^0",
     "karma-sinon-chai": "^1.1.0",
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
@@ -49,6 +49,6 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS karma.conf.js"
+    "test": "./node_modules/.bin/karma start --single-run --browsers Firefox karma.conf.js"
   }
 }
