--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "messageport-dispatcher",
   "description": "Cross-domain EventDispatcher for MessagePort interface",
   "version": "1.0.5",
-  "main": "src/index.js",
+  "main": "source/index.js",
   "keywords": [
     "events",
     "webworker",
