--- a/package.json
+++ b/package.json
@@ -1,71 +1,130 @@
 {
   "name": "@actualwave/messageport-dispatcher",
   "description": "Cross-domain EventDispatcher for MessagePort interface",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "dist/messageport-dispatcher.js",
   "keywords": [
+    "event",
     "events",
-    "webworker",
-    "crossdomain",
-    "postMessage",
-    "message",
-    "worker",
+    "object",
+    "dispatch",
+    "fire",
+    "subscribe",
     "fire",
     "handle",
     "listener",
     "dispatcher",
     "addEventListener",
     "removeEventListener",
-    "dispatchEvent"
+    "dispatchEvent",
+    "webworker",
+    "crossdomain",
+    "postMessage",
+    "message",
+    "worker"
   ],
-  "homepage": "https://github.com/burdiuz/js-lib-environment",
+  "homepage": "https://github.com/burdiuz/js-event-dispatcher",
   "bugs": {
-    "url": "https://github.com/burdiuz/js-lib-environment/issues",
+    "url": "https://github.com/burdiuz/js-event-dispatcher/issues",
     "email": "burdiuz@gmail.com"
   },
   "license": "MIT",
   "author": "Oleg Galaburda <burdiuz@gmail.com> (http://actualwave.com/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/burdiuz/js-lib-environment.git"
+    "url": "https://github.com/burdiuz/js-event-dispatcher.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@actualwave/event-dispatcher": "^1.1.14",
+    "@actualwave/has-own": "^0.0.1"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.5",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-jest": "^22.4.3",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-flowtype": "^2.48.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "@actualwave/event-dispatcher": "^1.1.13",
-    "flow-bin": "^0.57.3",
-    "karma": "^1.7.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coveralls": "^1.1.2",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^1.3.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.5",
-    "mocha": "^4.0.1",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "flow-bin": "^0.72.0",
+    "husky": "^0.14.3",
+    "jest": "^22.4.3",
+    "lint-staged": "^7.1.0",
+    "prettier": "^1.12.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-uglify": "^3.0.0",
+    "uglify-es": "^3.3.9"
+  },
+  "lint-staged": {
+    "source/**/*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "arrowParens": "always",
+    "parser": "flow"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "babel-plugin-transform-es2015-modules-commonjs",
+          "babel-plugin-transform-flow-strip-types",
+          "babel-plugin-transform-class-properties",
+          [
+            "babel-plugin-transform-object-rest-spread",
+            {
+              "useBuiltIns": true
+            }
+          ]
+        ],
+        "presets": [
+          "jest"
+        ]
+      }
+    }
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov"
+    ],
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "source/**/*.js",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ]
   },
   "scripts": {
-    "start": "webpack",
-    "lint": "./node_modules/.bin/eslint \"source/**/!(*.spec).js\"",
-    "lint:spec": "./node_modules/.bin/eslint -c eslintrc.spec.json \"source/**/*.spec.js\"",
+    "start": "npm run build",
+    "build": "rollup --config",
+    "build:watch": "rollup --config --watch \"./source\"",
+    "lint": "./node_modules/.bin/eslint \"source/**/*.js\"",
     "flow": "./node_modules/.bin/flow",
-    "server": "./node_modules/.bin/webpack-dev-server --port 8081 --config webpack.config.main.js --open",
-    "test": "./node_modules/.bin/karma start --single-run --browsers Firefox karma.conf.js"
+    "server": "rollup --config rollup.serve.js",
+    "test": "jest --colors",
+    "test:watch": "jest --colors --watch",
+    "lint-staged": "lint-staged",
+    "precommit": "npm run build && npm run test && npm run flow && npm run lint-staged"
   }
 }
