--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -83,13 +82,7 @@
         "plugins": [
           "babel-plugin-transform-es2015-modules-commonjs",
           "babel-plugin-transform-flow-strip-types",
-          "babel-plugin-transform-class-properties",
-          [
-            "babel-plugin-transform-object-rest-spread",
-            {
-              "useBuiltIns": true
-            }
-          ]
+          "babel-plugin-transform-class-properties"
         ],
         "presets": [
           "jest"
